b2b-postgres-security-jwt: complete services [6.3]