@@ -54,7 +54,7 @@ public class MongoBaseEssenceConstructor extends AbstractEssenceConstructor {
                     user.setEmail(defaultUser.getEmail());
                     return user;
                 })
-                .collect(Collectors.toList());
+                .toList();
         this.usersRepository.saveAll(dbUsers);
         return dbUsers.size();
     }
@@ -67,7 +67,8 @@ public class MongoBaseEssenceConstructor extends AbstractEssenceConstructor {
                                 defaultUser.getUsername(),
                                 authorities
                         )
-                ).collect(Collectors.toList());
+                )
+                .toList();
         this.invitationCodesRepository.saveAll(dbInvitationCodes);
     }
 }
